[package]
name = "taskn"
version = "0.1.0"
authors = ["Cerek Hillen <cerekh@gmail.com>"]
edition = "2018"

[features]
eventkit = ["objc"]

[dependencies]
block = "0.1.6"
chrono = "0.4.19"
lazy_static = "1.4.0"
objc = { version = "0.2.7", features = ["exception"], optional = true }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
shellexpand = "2.1.0"
signal-hook = "0.3.7"
structopt = "0.3.21"
termion = "1.5.6"
tui = "0.14.0"
